testdata/baselines/reference/submodule/compiler/moduleResolutionWithExtensions_notSupported.errors.txt
/a.ts(1,17): error TS2306: File '/tsx.tsx' is not a module.


==== /a.ts (1 errors) ====
    import tsx from "./tsx"; // Not allowed.
                    ~~~~~~~
!!! error TS2306: File '/tsx.tsx' is not a module.
    import jsx from "./jsx"; // Not allowed.
    import js from "./js"; // OK because it's an untyped module.
    
==== /tsx.tsx (0 errors) ====
    
==== /jsx.jsx (0 errors) ====
    
==== /js.js (0 errors) ====
    